fix overflow problem on @media

--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,5 @@
   align-items: center;
   width: 100%;
   font-family: "Lato-Regular", sans-serif;
+  overflow: hidden;
 }
