--- a/src/pages/Home/CardsWrapper/CardsWrapper.css
+++ b/src/pages/Home/CardsWrapper/CardsWrapper.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding: 0 120px;
+  overflow: hidden;
 }
 
 .cardsContainer {
@@ -27,7 +28,7 @@
   transform: scale(1.05);
 }
 
-@media (max-width: 1080px) {
+@media (max-width: 768px) {
   .weatherCard {
     width: 300px;
     height: 240px;
