--- a/src/pages/Home/Footer/footer.css
+++ b/src/pages/Home/Footer/footer.css
@@ -9,6 +9,7 @@
   background-color: var(--primary-color);
   margin-bottom: 0;
   align-items: center;
+  overflow: hidden;
 }
 
 .footer-text {
@@ -39,7 +40,7 @@
   }
 }
 
-@media (max-width: 1080px) {
+@media (max-width: 768px) {
   .footer-container {
     width: 100%;
     height: 160px;
