--- a/src/pages/Home/HeaderAndTagline/HeaderSection/header.css
+++ b/src/pages/Home/HeaderAndTagline/HeaderSection/header.css
@@ -11,9 +11,6 @@
   z-index: 100;
 }
 
-/* .logo {
-} */
-
 .name {
   font-size: 16px;
 }
