--- a/src/pages/Home/HeaderAndTagline/TaglineSection/tagline.css
+++ b/src/pages/Home/HeaderAndTagline/TaglineSection/tagline.css
@@ -16,7 +16,6 @@
 
 @media (max-width: var(--mobile-width)) {
   .tagText {
-    padding: 30px 10px;
     min-height: 150px;
   }
 }
@@ -34,14 +33,11 @@ h3 {
   max-width: 800px;
 }
 
-@media (max-width: 1080px) {
+@media (max-width: 768px) {
   h3 {
-    padding: 0 50px;
     font-size: 40px;
     margin-top: 60px;
     margin-bottom: 30px;
-    margin-left: 75px;
-    margin-right: 75px;
     stroke: 1px;
     height: 110px;
     width: 300px;
@@ -50,12 +46,9 @@ h3 {
 
 @media (max-width: 480px) {
   h3 {
-    padding: 0 50px;
     font-size: 40px;
     margin-top: 60px;
     margin-bottom: 30px;
-    margin-left: 75px;
-    margin-right: 75px;
     stroke: 1px;
     height: 110px;
     width: 300px;
@@ -86,14 +79,11 @@ h5 {
 
 @media (max-width: 480px) {
   h5 {
-    padding: 0 20px;
     font-size: 20px;
     font-weight: 100;
     height: 100px;
     width: 300px;
     margin-top: 40px;
     margin-bottom: 70px;
-    margin-left: 45px;
-    margin-right: 45px;
   }
 }
